OmegaGo/tests/Core/OmegaGo.Client.Core.Tests/Sgf/Parsing/SampleSgfs/Invalid/);/); - not legal.sgf
(;SZ[9];B[ac](;W[ad]);W[ae])